--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en-GB">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,7 +28,7 @@
         </select>
 
         <label for="time">Waktu:</label>
-        <input type="time" id="time" required>
+        <input type="text" id="time" pattern="[0-9]{2}:[0-9]{2}" placeholder="HH:MM" required>
 
         <label for="room">Ruangan:</label>
         <input type="text" id="room" placeholder="Ruangan" required>
